--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "ethers": "^6.7.1",
